Bug 1897093 - Improve performance of Gloda indexing in tests. r=aleca

This is a bizarre bug. The tests I've changed here (mostly the first one) are failing when run
on macOS 14.70. I've tracked it down to this part of the MIME parser where it goes to the OS and
asks for a file extension for a given content type. The OS is responding very slowly and since
it's getting asked the same thing many times, it's taking too long and the test is timing out.

I've hard-coded in the extension for "text/plain" is "txt". Because it is.

Differential Revision: https://phabricator.services.mozilla.com/D259038

--HG--
extra : amend_source : 8a9ec1f5e73f51e450e0d94e8cd5a776be82ab8b